<?xml version="1.0" encoding="UTF-8"?>
<resources><!-- labels for widgets -->

    <string name="action_settings">Settings</string>
    <string name="hintWeigth">Enter your Weigth(kg)</string>
    <string name="hintHeight">Enter your Height(m)</string>
    <string name="txtClear">Clear</string>
    <string name="txtCalculate">Calculate BMI</string>
    <string name="txtExit">Exit</string>
    <string name="txtUnitSetting">Units:</string>
    <string name="spnrItemMetric">Metric (kg , m)</string>
    <string name="spnrItemImperial">Imperial (lbs, ft)</string>
    <string name="txtSave">Save</string>
    <string name="txtCalcIdeal">Calculate Ideal Weight</string>


    <string name="app_name">Fitness_Trainer</string>
    <string name="slogan1">Everyday is a choice.</string>
    <string name="slogan2"> Once you can control your mind,</string>
    <string name="slogan3">you can control your body</string>
    <string name="slogan4"> Be an inspiration</string>

    <string name="heightLabel">Height</string>

    <string name="calculateButton">Calculate</string>

    <string name="EmptyString" />

    <string name="weightLabel">Weight</string>

    <string name="bmiLabel">Body Mass Index:</string>

    <!-- the BMI descriptions -->


    <string name="bmiNormal">Normal</string>

    <string name="bmiOver">Overweight</string>

    <string name="bmiUnder">Underweight</string>

    <string name="bmiSUnder">Severely Underweight</string>

    <string name="bmiObese">Obese</string>

    <string name="being_healthy_quote">Being healthy is a lifestyle not a diet!</string>

    <string name="infokurz">calculator example</string>

    <!-- Strings arrays used in Spinner widgets -->


    -
    <string-array name="heightUnitsArray">

        <item>feet/inch</item>

        <item>m/cm</item>

    </string-array>


    -
    <string-array name="weightUnitsArray">

        <item>lb</item>

        <item>kg</item>

    </string-array>

    <!-- Colors used to used in the labels and the backgrounds -->


    <color name="colorRed">#ff0000</color>

    <color name="colorYellow">#00ffff</color>

    <color name="colorGreen">#3661d9</color>

    <color name="colorPurple">#d760a7</color>

    <color name="colorBG">#bbeceb</color>

    <color name="black">#000000</color>

</resources>