<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:orientation="vertical">


        <TextView
            android:id="@+id/txtslogan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/slogan1"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtslogan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/slogan2"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/txtslogan3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/slogan3"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/txtslogan4"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slogan4"
            android:layout_marginLeft="40dp"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:text="Sign up"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_margin="8dp" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIN"
            android:text="Sign in"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_margin="8dp" />

    </LinearLayout>


</RelativeLayout>